gl33-master/src/test/deca/syntax/invalid/others/bracketEnPlusClasse1.deca
//Test invalid: bracket en plus pour la classe

class MyClass{
  int a;
 }
}


{

}
